--- a/res/css/views/right_panel/_RoomSummaryCard.pcss
+++ b/res/css/views/right_panel/_RoomSummaryCard.pcss
@@ -194,10 +194,6 @@ limitations under the License.
 
 .mx_RoomSummaryCard_header {
     padding: 15px 12px;
-
-    .mx_BaseCard_close {
-        flex-shrink: 0;
-    }
 }
 
 .mx_RoomSummaryCard_search input {
